# 2DgamesSFML

./: CMakeLists.txt
include/: Background.h  Camera.h  CameraManager.h  CollisionManager.h  CollisionType.h  Game.h  InputHandler.h  Kulka.h  KulkiManager.h  LevelCreator.h  LevelLoader.h  Maths.h  MousePlayer.h  Player.h  Sprite.h
res/levels/: level1.json  level2.json  level3.json
res/levels/maze/: maze.json
res/levels/mazes/: maze1.json  maze2.json  maze3.json
res/shaders/: frameBuff.frag
src/: Background.cpp  Camera.cpp  CameraManager.cpp  CollisionManager.cpp  Game.cpp  InputHandler.cpp  Kulka.cpp  KulkiManager.cpp  LevelCreator.cpp  LevelLoader.cpp  MousePlayer.cpp  Player.cpp  main.cpp
